--- a/fetch_test/fetch-test.html
+++ b/fetch_test/fetch-test.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>fetch api test</title>
-        <script src="fetch.js">
-        </script>
+        <script src="fetch.js"></script>
+        <script src="promise.js"></script>
     </head>
     <body>
-        <input type="button" value="Exec" onclick="test()"/><br />
+        <input type="button" value="Get" onclick="test()"/><br />
+        <input type="button" value="promise" onclick="promise()"/><br />
     </body>
 </html>
